--- a/templates/posts.html
+++ b/templates/posts.html
@@ -20,6 +20,8 @@ Posts
     <a href="{% url 'article_create' %}">Добавить статью</a>
     {% endif %}
 
+{% load cache %}
+    {% cache 60 table %}
     {% if posts %}
         <table>
             <tr>
@@ -70,6 +72,7 @@ Posts
     {% else %}
         <h2>Публикаций нет!</h2>
     {% endif %}
+    {% endcache %}
 
     {% if page_obj.has_previous %}
         <a href="?page=1">1</a>
